create_project(mbedTLS_AES ${CMAKE_CURRENT_LIST_DIR}/mbedTLS_AES/main.c)
target_link_libraries(mbedTLS_AES test_lib mbedx509 crypto_accelerator)
create_project(mbedTLS_ECDH ${CMAKE_CURRENT_LIST_DIR}/mbedTLS_ECDH/test_suite_ecdh.c)
target_link_libraries(mbedTLS_ECDH test_lib mbedx509 crypto_accelerator)
create_project(mbedTLS_ECDSA ${CMAKE_CURRENT_LIST_DIR}/mbedTLS_ECDSA/test_suite_ecdsa.c)
target_link_libraries(mbedTLS_ECDSA test_lib mbedx509 crypto_accelerator)
create_project(mbedTLS_RSA ${CMAKE_CURRENT_LIST_DIR}/mbedTLS_RSA/main.c)
target_link_libraries(mbedTLS_RSA test_lib mbedx509 crypto_accelerator)
create_project(mbedTLS_SHA256 ${CMAKE_CURRENT_LIST_DIR}/mbedTLS_SHA256/main.c)
target_link_libraries(mbedTLS_SHA256 test_lib mbedx509 crypto_accelerator)
